--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -145,9 +145,9 @@
                         </StackPanel>
 
 
-                        <Button Content="рассчитать" Height="40" Background="{DynamicResource PrimaryBaseColor}" Foreground="{DynamicResource PrimaryTextColor}" FontWeight="Bold" FontSize="24" Padding="1,1,1,5" Click="Integral_Calculate" Margin="0,10,0,10" />
+                        <Button x:Name="I_Calculating" Content="рассчитать" Height="40" Background="{DynamicResource PrimaryBaseColor}" Foreground="{DynamicResource PrimaryTextColor}" FontWeight="Bold" FontSize="24" Padding="1,1,1,5" Click="Integral_Calculate" Margin="0,10,0,10" />
 
-                        <Label Visibility="Hidden" x:Name="I_Answer" Content="Ответ: " FontWeight="Normal" Foreground="{DynamicResource PrimaryTextColor}" />
+                        <Label x:Name="I_Answer" Content="" FontWeight="Normal" Foreground="{DynamicResource PrimaryTextColor}" />
 
 
                     </StackPanel>
@@ -327,9 +327,9 @@
 
                         </StackPanel>
 
-                        <Button Grid.Row="2" Grid.Column ="0" Grid.ColumnSpan ="2" Content="рассчитать" Height="40" Background="{DynamicResource PrimaryBaseColor}" Foreground="{DynamicResource PrimaryTextColor}" FontWeight="Bold" FontSize="24" Padding="1,1,1,5" Click="SoE_Calculate" Margin="0,10,0,10" VerticalAlignment="Top" HorizontalAlignment="Stretch" Width="780" />
+                        <Button  x:Name="SoE_Calculating" Grid.Row="2" Grid.Column ="0" Grid.ColumnSpan ="2" Content="рассчитать" Height="40" Background="{DynamicResource PrimaryBaseColor}" Foreground="{DynamicResource PrimaryTextColor}" FontWeight="Bold" FontSize="24" Padding="1,1,1,5" Click="SoE_Calculate" Margin="0,10,0,10" VerticalAlignment="Top" HorizontalAlignment="Stretch" Width="780" />
 
-                        <Label Grid.Row="2" Grid.Column ="0" Grid.ColumnSpan ="2" Visibility="Hidden"  x:Name="SoE_Answer" Content="Ответ: " FontWeight="Normal" Foreground="{DynamicResource PrimaryTextColor}" Margin="9,60,0,0"  />
+                        <Label Grid.Row="2" Grid.Column ="0" Grid.ColumnSpan ="2"  x:Name="SoE_Answer" Content="" FontWeight="Normal" Foreground="{DynamicResource PrimaryTextColor}" Margin="9,60,0,0"  />
 
                     </Grid>
 
