--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -97,38 +97,43 @@
         <Border VerticalAlignment="Top" HorizontalAlignment="Center" Background="{DynamicResource PrimaryBaseColor}" Margin="0,50,0,0">
             <TabControl Width="800" Height="430" Style="{DynamicResource TabControlStyle}" Background="{DynamicResource SecondaryBaseColor}" BorderBrush="#FF27282B">
 
-                <TabItem  Header="нелинейные уравнения" Style="{DynamicResource TabItemStyle}" FontSize="20" FontWeight="Bold" >
+                <TabItem  Header="нелинейные уравнения" Style="{DynamicResource TabItemStyle}" FontSize="20" FontWeight="Bold"  >
                     <StackPanel Background="{DynamicResource PrimaryGrayColor}">
 
                         <StackPanel Orientation="Horizontal" >
-                            <Label Content="Найти решение уравнения: 2sin(x) = x + 2 на отрезке от" FontWeight="Normal" Foreground="{DynamicResource PrimaryTextColor}" HorizontalAlignment="Left" />
-                            <TextBox x:Name="NLQ_from" Text="-10" VerticalAlignment="Stretch" MaxWidth="110" MinWidth="60" Height="34" FontWeight="Bold" TextAlignment="Center" Margin="0,5,0,0" />
+                            <Label Content="Решение уравнения на отрезке от" FontWeight="Normal" Foreground="{DynamicResource PrimaryTextColor}" HorizontalAlignment="Left" />
+                            <TextBox x:Name="NLQ_from" Text="-10" VerticalAlignment="Stretch" MaxWidth="90" MinWidth="60" Height="34" FontWeight="Bold" TextAlignment="Center" Margin="0,5,0,0" Width="90" />
                             <Label Content="до" FontWeight="Normal" Foreground="{DynamicResource PrimaryTextColor}" HorizontalAlignment="Left" />
-                            <TextBox x:Name="NLQ_to" Text="10" VerticalAlignment="Stretch" MaxWidth="110" MinWidth="60" Height="34" FontWeight="Bold" TextAlignment="Center" Margin="0,5,0,0" />
-                        </StackPanel>
+                            <TextBox x:Name="NLQ_to" Text="10" VerticalAlignment="Stretch" MaxWidth="90" MinWidth="60" Height="34" FontWeight="Bold" TextAlignment="Center" Margin="0,5,0,0" Width="90" />
 
-                        <StackPanel Orientation="Horizontal">
                             <Label Content="с точностью" FontWeight="Normal" Foreground="{DynamicResource PrimaryTextColor}" HorizontalAlignment="Left" />
-                            <TextBox x:Name="NLQ_precision" MaxWidth="650" MinWidth="60" Text="0,00001" FontWeight="Bold" TextAlignment="Center" Margin="0,5,0,0" />
+                            <TextBox x:Name="NLQ_precision" MaxWidth="120" MinWidth="60" Text="0,00001" FontWeight="Bold" TextAlignment="Center" Margin="0,5,0,0" />
+
+
                         </StackPanel>
 
-                        <Button x:Name="NLE"  Content="рассчитать" Height="40" Background="{DynamicResource PrimaryBaseColor}" Foreground="{DynamicResource PrimaryTextColor}" FontWeight="Bold" FontSize="24" Padding="1,1,1,5" Click="NLE_Calculate" Margin="0,10,0,10" />
-
-                        <StackPanel x:Name="NLE_AdditinalText" Visibility="Hidden">
-                            <Label Content="Преобразуем уравнение: F(x) = 2sin(x) - 2 - x" FontWeight="Normal" Foreground="{DynamicResource PrimaryTextColor}" Margin="0,5,0,0" />
-                            <Label Content="Найдём производную первого порядка: F'(x) = 2cos(x) - 1" FontWeight="Normal" Foreground="{DynamicResource PrimaryTextColor}" />
-                            <Label Content="Найдём производную второго порядка: F''(x) = -2sin(x)" FontWeight="Normal" Foreground="{DynamicResource PrimaryTextColor}" Margin="0,0,0,25" />
-                            <Label x:Name="NLE_Answer" Content="Ответ: " FontWeight="Normal" Foreground="{DynamicResource PrimaryTextColor}" />
+                        <StackPanel Orientation="Horizontal" Margin="5,15,0,15">
+                            <TextBox x:Name="NLQ_expression" MaxWidth="710" MinWidth="60" Text="2sin(x) - 2 - x" FontWeight="Bold" TextAlignment="Center" Margin="0,5,0,0" />
+                            <Label Content="= 0" FontWeight="Normal" Foreground="{DynamicResource PrimaryTextColor}" HorizontalAlignment="Left" />
                         </StackPanel>
 
+                        <Button x:Name="NLE_calculating"  Content="рассчитать" Height="40" Background="{DynamicResource PrimaryBaseColor}" Foreground="{DynamicResource PrimaryTextColor}" FontWeight="Bold" FontSize="24" Padding="1,1,1,5" Click="NLE_Calculate" Margin="0,10,0,10" />
+
+                        <StackPanel>
+                            <Label x:Name="Derivative1" Content="" FontWeight="Normal" Foreground="{DynamicResource PrimaryTextColor}" />
+                            <Label x:Name="Derivative2" Content="" FontWeight="Normal" Foreground="{DynamicResource PrimaryTextColor}" Margin="0,0,0,25" />
+                            
+                        </StackPanel>
+
+                        <Label x:Name="NLE_Answer" Content="" FontWeight="Normal" Foreground="{DynamicResource PrimaryTextColor}" />
 
                     </StackPanel>
                 </TabItem>
 
                 <TabItem  Header="интегрирование" Style="{DynamicResource TabItemStyle}" FontSize="20" FontWeight="Bold">
-                    <StackPanel>
+                    <StackPanel Background="{DynamicResource PrimaryGrayColor}">
 
-                        <Label Content="Решение определённого интеграла методом Монте-Карло, количество случайных" FontWeight="Normal" Foreground="{DynamicResource PrimaryTextColor}" Margin="0,0,0,0" Height="36" />
+                        <Label Content="Решение определённого интеграла методом Монте-Карло, количество случайных" FontWeight="Normal" Foreground="{DynamicResource PrimaryTextColor}" Margin="0,0,0,0" Height="36"  />
                         <StackPanel Orientation="Horizontal" >
                             <Label Content="велечин: " FontWeight="Normal" Foreground="{DynamicResource PrimaryTextColor}" Margin="0,0,0,0" Height="36" />
                             <TextBox x:Name="I_iteration" Text="100000" VerticalAlignment="Center" MaxWidth="680"  MinWidth="60"  FontWeight="Bold" TextAlignment="Center" Margin="0,0,0,0" HorizontalAlignment="Left" />
@@ -155,7 +160,7 @@
 
                 <TabItem  Header="cистема уравнений" Style="{DynamicResource TabItemStyle}" FontSize="20" FontWeight="Bold" >
 
-                    <Grid  Background="{DynamicResource PrimaryGrayColor}">
+                    <Grid Background="{DynamicResource PrimaryGrayColor}">
 
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto"></RowDefinition>
